<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		    android:id="@+id/lbl_diary_title"
		    android:layout_width="wrap_content"
		    android:layout_height="50dp"
		    android:textSize="20sp"
		    android:text="@string/diary_title" />
		
	    <EditText 
	        android:id="@+id/txt_diary_title"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:hint="@string/diary_title_hint"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		<TextView
		    android:id="@+id/lbl_diary_date"
		    android:layout_width="wrap_content"
		    android:layout_height="50dp"
		    android:textSize="20sp"
		    android:text="@string/diary_date" />
		
	    <EditText
	        android:id="@+id/txt_diary_date"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:hint="@string/diary_date_hint"
	        tools:ignore="TextFields" />

    </LinearLayout>
    
    <TextView 
        android:id="@+id/lbl_diary_content"
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:text="@string/diary_content"/>
    
    <EditText 
        android:id="@+id/txt_diary_content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:hint="@string/diary_content_hint"
        android:gravity="top"/>

</LinearLayout>
